--- a/MT1_評価課題2.md
+++ b/MT1_評価課題2.md
@@ -5,7 +5,7 @@
 #include <math.h>
 #include <Vector2.h>
 
-const char kWindowTitle[] = "GC1D_06_サティッピッタヤユット_サハチャート_タイトル";
+const char kWindowTitle[] = "GC1D_06_サティッピッタヤユット_サハチャート_MT1_評価課題2";
 const int kWindowWidth = 1280; //screen width
 const int kWindowHeight = 720; //screen height
 
